--- a/templates/nuevoReporte.html
+++ b/templates/nuevoReporte.html
@@ -24,47 +24,50 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="fondo1">
-    <header class="header">
-        <div class="respmenu">
-            <div class="logo-header">
-                <a href="index.html"></a><img src="imagenes/logo.jpg" alt="logo de la comunidad gamer"></a>
+<body style="background-color: #FFE599;">
+    <header class="header" style="margin-left: 5%; margin-right: 5%;">
+        <div class="respmenu" style="display: flex; flex-direction: row;
+         height: 150px; justify-content: space-evenly; align-items: center;">
+            <div class="logo-header" style="width: 10%; height: 80%;">
+                <a href="index.html"></a><img src="imagenes/logo.png" alt="logo de la comunidad gamer" style="height: 100%; width: 100%;"></a>
             </div>
-            <input type="checkbox">
-            <i class="fas fa-bars"></i>
-            <i class="fas fa-times"></i>
-            <nav class="nav-menu">
-                <ul>
-                    <li><a href="inicio.html">Inicio</a></li>
-                    <li><a href="login.html"> Login</a></li>
-                    <li><a href="contactenos.html"> Contáctenos</a> </li>
+            <nav class="nav-menu" style="width: 65%;">
+                <ul style="list-style-type: none; display: flex;
+                 justify-content: space-evenly; align-items: center; 
+                 flex-direction: row; flex-wrap: nowrap; font-size: 3vw;
+                 font-family: 'Roboto Mono', cursive;">
+                    <li id="nav"><a href="inicio.html" id="textoNav" style="text-decoration: none; color: black;">Inicio</a></li>
+                    <li id="nav"><a href="login.html" id="textoNav" style="text-decoration: none; color: black;"> Log In</a></li>
+                    <li id="nav"><a href="contactenos.html" id="textoNav" style="text-decoration: none; color: black;"> Contáctenos</a>
                 </ul>
             </nav>
         </div>
     </header>
     
-    <body class="fondo1">
-        <main>
-            <div class="marco1">
-                <div class="marco">
-                    <p>Enfermero</p> 
-                    <p><label for=""></label></p>
-                    <a href="inicio.html" class="btn btn-secondary btn-block col-md-2 mb-4" tabindex="5">Desconectar</a>
+    
+    <main style="background-color: #B7CDE0;">
+        <div style="display: flex; flex-direction: row; justify-content: space-around; padding-top: 30px;
+        border-top: black solid 3px; border-bottom: black solid 3px;">
+            <h2 style="font-family: 'Roboto Mono';">Enfermero</h2> 
+            <p><label for=""></label></p>
+            <a href="inicio.html" class="btn btn-danger btn-block col-md-2 mb-4" style="font-size: 1.5vw;" tabindex="5">Desconectar</a>
+        </div>
+
+        <div style="display: flex; flex-direction: row;">
+            <div style="width: 25%;">
+                <div style="padding-top: 2.5%; padding-bottom: 2.5%;
+                 display: flex; flex-direction: column; align-items: center; text-align: center;">
+                    <h2 style="font-family: 'Roboto Mono';"> Servicios Disponibles</h2>
+                    <br>
+                    <a href="enfermero01.html" class="btn btn-light btn-block col-md-2 mb-4" style="width: 100%; font-size: 1.5vw;" tabindex="5">Vacunados</a>
+                    <a href="turnosEnfermeros.html" class="btn btn-light btn-block col-md-2 mb-4" style="width: 100%; font-size: 1.5vw;" tabindex="5">Horarios de los turnos</a>
+                    <a href="nuevoReporte.html" class="btn btn-light btn-block col-md-2 mb-4" style="width: 100%; font-size: 1.5vw;" tabindex="5">Crear reporte</a>
                 </div>
             </div>
-
-            <div class="marco1">
-                <div class="marco">
-                    <h1> Servicios Disponibles</h1>
-                    <a href="enfermero01.html" class="btn btn-secondary btn-block col-md-2 mb-4" tabindex="5">Vacunados</a>
-                    <a href="turnosEnfermeros.html" class="btn btn-secondary btn-block col-md-2 mb-4" tabindex="5">Horarios de los turnos</a>
-                    <a href="nuevoReporte.html" class="btn btn-secondary btn-block col-md-2 mb-4" tabindex="5">Crear reporte</a>
-                </div>
-            </div>
-
-            <div class="marco1">
-                <div class="marco">
-                    <h1>Registro de nuevo reporte</h1>
+            
+            <div style="border-left: black solid 3px; padding: 1.5%; width: 75%; background-color: #FFE599;">
+                <div style="background-color: #679ece; border-radius: 20px; padding: 1.5%;">
+                    <h2 style="font-family: 'Roboto Mono';">Registro de nuevo reporte</h2>
                     <form id="save_user_club">
         
                         <div class="mt-3">
@@ -91,8 +94,9 @@
                             <label for="" class="form-label">Prioridad<label class="text-danger">*</label></label>
                             <input id="Prioridad" name="Prioridad" type="number" class="form-control" tabindex="5" required>
                         </div>
-                        <div class="mt-3">
-                            <button type="submit" class="btn btn-primary btn-block col-md-2 mb-4" data-bs-toggle="modal" data-bs-target="#exampleModal">Registrar Nuevo Reporte</button>         
+                        <br>
+                        <div class="mt-3" style="display: flex; flex-direction: row; justify-content: center;">
+                            <button type="submit" class="btn btn-success btn-block" data-bs-toggle="modal" data-bs-target="#exampleModal">Registrar Nuevo Reporte</button>         
                         
                         <!-- Modal -->
                             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -103,35 +107,40 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-footer">
-                                    <a href="nuevoReporte.html" class="btn btn-primary">aceptar</a>
+                                    <a href="nuevoReporte.html" class="btn btn-primary">Aceptar</a>
                                     </div>
                                 </div>
                                 </div>
                             </div>
                         </div>
-                    </form>    
+                    </form>
                           
                 </div>
-            </div>
-        </main>
-    </body>
-
-    <footer>
-        <div class="social-icon-container">
-            <a href="https://facebook.com/" class="social-icon"> <img src="imagenes/facebook.png" alt="facebook"></a>
-            <a href="https://instagram.com/" class="social-icon"> <img src="imagenes/instagram.png" alt="instagram"></a>
-            <a href="https://twitter.com/" class="social-icon"> <img src="imagenes/twitter.png" alt="twitter"></a>
-            <a href="https://youtube.com/" class="social-icon"> <img src="imagenes/youtube.png" alt="youtube"></a>
+            </div> 
+            
         </div>
-        <ul class="footer-menu-container">
-            <li class="menu-item">Legal</li>
-            <li class="menu-item">Cookies</li>
-            <li class="menu-item">Privacy</li>
-            <li class="menu-item">Shipping</li>
-            <li class="menu-item">Refounds</li>
-        </ul>
-        <span class="copyright">&copy;2023, Centro Vacunatorio. All rights reserved.</span>
-    </footer>
+
+        </main>
+    
+
+        <footer style="background-color: black; display: flex; flex-direction: column;
+        justify-content: center; align-items: center; color: white">
+           <br>
+           <div style="display: flex; justify-content: space-around; height: 50px;">
+               <a href="https://facebook.com/" class="social-icon"> <img src="imagenes/facebook.png" alt="facebook" style="height: 75%;"></a>
+               <a href="https://instagram.com/" class="social-icon"> <img src="imagenes/instagram.png" alt="instagram" style="height: 100%;"></a>
+               <a href="https://twitter.com/" class="social-icon"> <img src="imagenes/twitter.png" alt="twitter" style="height: 100%;"></a>
+               <a href="https://youtube.com/" class="social-icon"> <img src="imagenes/youtube.png" alt="youtube" style="height: 100%;"></a>
+           </div>
+           <ul style="list-style-type: none; text-align: center; font-family: 'Roboto Mono';">
+               <li style="margin-bottom: 2.5px;">Legal</li>
+               <li style="margin-bottom: 2.5px;">Cookies</li>
+               <li style="margin-bottom: 2.5px;">Privacy</li>
+               <li style="margin-bottom: 2.5px;">Shipping</li>
+               <li style="margin-bottom: 2.5px;">Refounds</li>
+           </ul>
+           <span style="margin-bottom: 10px;">&copy;2023, Centro Vacunatorio. All rights reserved.</span>
+       </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous">
