--- a/templates/login.html
+++ b/templates/login.html
@@ -29,16 +29,16 @@
         <div class="respmenu" style="display: flex; flex-direction: row;
          height: 150px; justify-content: space-evenly; align-items: center;">
             <div class="logo-header" style="width: 10%; height: 80%;">
-                <a href="index.html"></a><img src="imagenes/logo.png" alt="logo de la comunidad gamer" style="height: 100%; width: 100%;"></a>
+                <a href="http://127.0.0.1:5000/index"></a><img src="imagenes/logo.png" alt="logo de la comunidad gamer" style="height: 100%; width: 100%;"></a>
             </div>
             <nav class="nav-menu" style="width: 65%;">
                 <ul style="list-style-type: none; display: flex;
                  justify-content: space-evenly; align-items: center; 
                  flex-direction: row; flex-wrap: nowrap; font-size: 3vw;
                  font-family: 'Roboto Mono', cursive;">
-                    <li id="nav"><a href="inicio.html" id="textoNav" style="text-decoration: none; color: black;">Inicio</a></li>
-                    <li id="nav"><a href="login.html" id="textoNav" style="text-decoration: none; color: black;"> Log In</a></li>
-                    <li id="nav"><a href="contactenos.html" id="textoNav" style="text-decoration: none; color: black;"> Contáctenos</a>
+                    <li id="nav"><a href="http://127.0.0.1:5000/inicio" id="textoNav" style="text-decoration: none; color: black;">Inicio</a></li>
+                    <li id="nav"><a href="http://127.0.0.1:5000/login" id="textoNav" style="text-decoration: none; color: black;"> Log In</a></li>
+                    <li id="nav"><a href="http://127.0.0.1:5000/contactenos" id="textoNav" style="text-decoration: none; color: black;"> Contáctenos</a> </li>
                 </ul>
             </nav>
         </div>
@@ -89,7 +89,7 @@
                                     <!-- Submit button -->
                                     <button type="submit" class="btn btn-primary btn-block col-md-4 mb-4" >Iniciar Sesion</button>
                                     <div class="text-center">
-                                        <a href="registro.html">¿no estas registrado?</a>
+                                        <a href="http://127.0.0.1:5000/registro">¿no estas registrado?</a>
                                      </div>
                                 </form>
                             </div>
