--- a/templates/usuario01.html
+++ b/templates/usuario01.html
@@ -29,16 +29,16 @@
         <div class="respmenu" style="display: flex; flex-direction: row;
          height: 150px; justify-content: space-evenly; align-items: center;">
             <div class="logo-header" style="width: 10%; height: 80%;">
-                <a href="index.html"></a><img src="imagenes/logo.png" alt="logo de la comunidad gamer" style="height: 100%; width: 100%;"></a>
+                <a href="http://127.0.0.1:5000/index"></a><img src="imagenes/logo.png" alt="logo de la comunidad gamer" style="height: 100%; width: 100%;"></a>
             </div>
             <nav class="nav-menu" style="width: 65%;">
                 <ul style="list-style-type: none; display: flex;
                  justify-content: space-evenly; align-items: center; 
                  flex-direction: row; flex-wrap: nowrap; font-size: 3vw;
                  font-family: 'Roboto Mono', cursive;">
-                    <li id="nav"><a href="inicio.html" id="textoNav" style="text-decoration: none; color: black;">Inicio</a></li>
-                    <li id="nav"><a href="login.html" id="textoNav" style="text-decoration: none; color: black;"> Log In</a></li>
-                    <li id="nav"><a href="contactenos.html" id="textoNav" style="text-decoration: none; color: black;"> Contáctenos</a> </li>
+                    <li id="nav"><a href="http://127.0.0.1:5000/inicio" id="textoNav" style="text-decoration: none; color: black;">Inicio</a></li>
+                    <li id="nav"><a href="http://127.0.0.1:5000/login" id="textoNav" style="text-decoration: none; color: black;"> Log In</a></li>
+                    <li id="nav"><a href="http://127.0.0.1:5000/contactenos" id="textoNav" style="text-decoration: none; color: black;"> Contáctenos</a> </li>
                 </ul>
             </nav>
         </div>
@@ -49,7 +49,7 @@
              border-top: black solid 3px; border-bottom: black solid 3px;">
                 <h2 style="font-family: 'Roboto Mono';">Paciente</h2> 
                 <p><label for=""></label></p>
-                <a href="inicio.html" class="btn btn-danger btn-block col-md-2 mb-4" style="font-size: 1.5vw;" tabindex="5">Desconectar</a>
+                <a href="http://127.0.0.1:5000/inicio" class="btn btn-danger btn-block col-md-2 mb-4" style="font-size: 1.5vw;" tabindex="5">Desconectar</a>
             </div>
 
             <div style="display: flex; flex-direction: row-reverse;">
@@ -72,9 +72,9 @@
                     <div style="padding-top: 2.5%; padding-bottom: 2.5%; display: flex; flex-direction: column; align-items: center; text-align: center;">
                         <h2 style="font-family: 'Roboto Mono';"> Servicios Disponibles</h2>
                         <br>
-                        <a href="usuario01.html" class="btn btn-light btn-block" style="width: 100%; font-size: 1.5vw;" tabindex="5">Lugares de vacunación</a>
+                        <a href="http://127.0.0.1:5000/usuario01" class="btn btn-light btn-block" style="width: 100%; font-size: 1.5vw;" tabindex="5">Lugares de vacunación</a>
                         <br>    
-                        <a href="dosisVacunacion.html" class="btn btn-light btn-block" style="width: 100%; font-size: 1.5vw;" tabindex="5">Dosis adquiridas</a>
+                        <a href="http://127.0.0.1:5000/dosisVacunacion" class="btn btn-light btn-block" style="width: 100%; font-size: 1.5vw;" tabindex="5">Dosis adquiridas</a>
                     </div>
                     
                 </div>
